--- a/src/app/blog/[slug]/ShareButtons.module.css
+++ b/src/app/blog/[slug]/ShareButtons.module.css
@@ -10,7 +10,7 @@
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.08em;
-  color: #999;
+  color: #767676;
   margin-right: 0.25rem;
 }
 
