--- a/src/app/newsroom/newscomponent.module.css
+++ b/src/app/newsroom/newscomponent.module.css
@@ -30,7 +30,7 @@
 
 .filterSelect {
   padding: 0.75rem 1rem;
-  border: 1px solid #ccc;
+  border: 1px solid #767676;
   font-size: 1rem;
   background-color: white;
   cursor: pointer;
