--- a/src/app/pitch/for-founders.module.css
+++ b/src/app/pitch/for-founders.module.css
@@ -217,7 +217,7 @@
 
 .checklistHint {
   font-size: 0.8125rem;
-  color: #999;
+  color: #767676;
   white-space: nowrap;
 }
 
